--- a/css-mediaquery/index.html
+++ b/css-mediaquery/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <h1>La trasformazione delle chitarre</h1>
       <div class="gtr fl">
         <img class="show-desktop" src="img/gtrantica.jpg" alt="">
         <img class="show-mobile" src="img/mandolino.jpg" alt="">
