--- a/12bool-responsive/index.html
+++ b/12bool-responsive/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!-- Marian Code -->
+    <div class="container">
+      <div class="col-lg-6 col-xs-12">
 
+      </div>
+      <div class="col-lg-6 col-xs-12">
+
+      </div>
+    </div>
+    <!-- end Marian Code -->
   </body>
 </html>
