--- a/12bool-responsive/index.html
+++ b/12bool-responsive/index.html
@@ -18,5 +18,20 @@
       </div>
     </div>
     <!-- end Marian Code -->
+
+    <!-- Teresa Code -->
+    <div class="container">
+      <div class="col-lg-4 col-md-12 col-xs-6">
+        1
+      </div>
+      <div class="col-lg-4 col-md-6 col-xs-6">
+        2
+      </div>
+      <div class="col-lg-4 col-md-6 col-xs-12">
+        3
+      </div>
+    </div>
+    <!-- end Teresa Code -->
+
   </body>
 </html>
