--- a/12bool-responsive/index.html
+++ b/12bool-responsive/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <nav class="container">
+
+      <ul class="col-lg-2">
+
+      </ul>
+      <ul class="col-lg-4 col-md-8 col-xs-10 offset-lg-6 offset-md-2 offset-xs-0">
+        <li>sono veramente euforico</li>
+        <li>pippo e pluto</li>
+        <li>oggi è venerdì</li>
+      </ul>
+
+    </nav>
+
+
     <!-- Marian Code -->
     <div class="container">
       <div class="col-lg-6 col-xs-12">
