--- a/12bool-responsive/index.html
+++ b/12bool-responsive/index.html
@@ -46,6 +46,43 @@
       </div>
     </div>
     <!-- end Teresa Code -->
+    <!-- Matteo M -->
+    <div class="container">
+      <div class="col-lg-6 col-xs-12">
+        <div class="container">
+          <div class="col-lg-2 col-md-4">
+            <div>
+              Nasted 2 col
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4">
+            <div>
+              Nasted 2 col
+            </div>
+          </div>
+          <div class="col-lg-8 col-md-4">
+            <div>
+              Nasted 8 col
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-xs-12">
+        <div class="container">
+          <div class="col-lg-6">
+            <div>
+              Nasted col 6
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div>
+              Nasted col 6
 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end Matteo M -->
   </body>
 </html>
