--- a/bootstrap-example/index.html
+++ b/bootstrap-example/index.html
@@ -7,50 +7,76 @@
     <title>Bootstrap 101 Template</title>
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
 
-    <div class="container bg-color">
-      <h1>Hello, world!</h1>
+    <div class="container-fluid bg-color">
+
       <div class="row">
-        <div class="col-xs-6"></div>
-        <div class="col-xs-6"></div>
+        <div class="jumbotron jumbotron-freelancer">
+          <h1>Hello, world!</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-1">1</div>
-        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">1</div>
-        <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">1</div>
-        <div class="col-xs-6 col-md-3 col-lg-6">1</div>
-        <div class="col-xs-12 col-sm-6 col-md-12 col-lg-1">1</div>
-      </div>
 
-      <div class="row example-on-visibility">
-        <div class="col-xs-4 col-sm-6"></div>
-        <div class="col-xs-4 col-sm-6"></div>
-        <div class="col-xs-4 visible-xs-block">Mi vedi?</div>
-      </div>
+        <!-- main content -->
+        <div class="col-xs-8">
+          <div class="row row-no-gutters">
+            <div class="col-xs-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+            <div class="col-xs-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          </div>
 
-      <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4 col-sm-offset-4"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-9">
           <div class="row">
-            <div class="col-xs-12">Level 1: .col-sm-9</div>
-            <div class="col-xs-8 col-sm-6">
-              Level 2: .col-xs-8 .col-sm-6
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-1">1</div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">1</div>
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">1</div>
+            <div class="col-xs-6 col-md-3 col-lg-6">1</div>
+            <div class="col-xs-12 col-sm-6 col-md-12 col-lg-1">1</div>
+          </div>
+
+          <div class="row example-on-visibility">
+            <div class="col-xs-4 col-sm-6"></div>
+            <div class="col-xs-4 col-sm-6"></div>
+            <div class="col-xs-4 visible-xs-block">Mi vedi?</div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4 col-sm-offset-4"></div>
+          </div>
+
+          <div class="row">
+            <div class="col-sm-6 col-xs-12">
+              <div class="row">
+                  <div class="col-sm-6 col-xs-6">A1</div>
+                  <div class="col-sm-6 col-xs-6">B1</div>
+              </div>
             </div>
-            <div class="col-xs-4 col-sm-6">
-              Level 2: .col-xs-4 .col-sm-6
+            <div class="col-sm-6 col-xs-12">
+              <div class="row">
+                  <div class="col-sm-6 col-xs-6">A2</div>
+                  <div class="col-sm-6 col-xs-6">B2</div>
+              </div>
             </div>
           </div>
         </div>
+        <!-- end main content -->
+
+        <div class="col-xs-4 sidebar">
+
+          <div class="row">
+            <div class="col-xs-6">sid 1</div>
+            <div class="col-xs-6">sid 2</div>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
