--- a/bootstrap-example/index.html
+++ b/bootstrap-example/index.html
@@ -8,7 +8,8 @@
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/navbar-style.css">
   </head>
   <body>
 
@@ -20,6 +21,16 @@
           <h1>Hello, world!</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+
+
+          <div class="star-separator star-white">
+            <i class="fa fa-star"></i>
+          </div>
+
+
+          <div class="star-separator star-dark">
+            <i class="fa fa-star"></i>
+          </div>
         </div>
       </div>
 
