Edoardo Pir code

--- a/helbiz/index.html
+++ b/helbiz/index.html
@@ -42,6 +42,28 @@
 
         </div>
 
+
+      </div>
+      <div class="row bg-man">
+
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-2 col-md-offset-2">
+          <div class="frst-span">
+            <span>How does Helbiz work?</span>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="phone">
+            <img src="img/iphone-frame.7897a89.png" alt="">
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="scnd-span">
+            <span>Step1</span>
+            <span>Leave curbside when finished</span>
+          </div>
+        </div>
       </div>
 
 
