--- a/helbiz/index.html
+++ b/helbiz/index.html
@@ -66,6 +66,22 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-xs-6 bg-blue">
+            <div class="">
+              <h3>Get the App</h3>
+              <span>Download the app and start riding today</span> <br>
+              <span>IOS > Android > </span>
+            </div>
+            <img src="img/phone.png" alt="">
+          </div>
+          <div class="col-xs-6">
+
+          </div>
+        </div>
+      </div>
+      
 
     </div>
 
