--- a/spotify/index.html
+++ b/spotify/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Spotify Live Coding</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -38,21 +39,45 @@
           <nav class="main-content-nav">
             nav
           </nav>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
-          <div class="generic-item"></div>
+          <div class="first-section">
+            <div class="generic-item">
+              <img src="img/split.jpeg" />
+              <div class="cover-text">Album Ciaone</div>
+            </div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+            <div class="generic-item"></div>
+          </div>
         </section>
 
       </main>
 
       <!-- play bar -->
-      <footer></footer>
+      <footer>
+        <div class="mini">A</div>
+        <div class="player">
+            <div class="player-control-bar">
+              <ul>
+                <li><i class="fa fa-random"></i></li>
+                <li><i class="fa fa-step-backward" aria-hidden="true"></i></li>
+                <li class="big"><i class="fa fa-play-circle-o" aria-hidden="true"></i></li>
+                <li><i class="fa fa-step-forward" aria-hidden="true"></i></li>
+                <li><i class="fa fa-repeat" aria-hidden="true"></i></li>
+              </ul>
+            </div>
+            <div class="player-control-time">
+              <div class="elapsed-time perc-20">
+                <div class="point"></div>
+              </div>
+            </div>
+        </div>
+        <div class="options">A</div>
+      </footer>
     </div>
 
   </body>
