--- a/effects/index.html
+++ b/effects/index.html
@@ -7,19 +7,20 @@
 </head>
 <body>
 
-  <!-- <div class="box-1">
+  <div class="box-1">
 
   </div>
 
   <div class="box-2">
 
-  </div> -->
+  </div>
   <div class="wrapper">
 
     <div class="box-3">
 
     </div>
   </div>
+
 
 </body>
 </html>
