js mini example

--- a/js-example/index.html
+++ b/js-example/index.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <div id="mio-ID">
-
+      CIAO.
     </div>
+    <h1>Io sono un h1</h1>
     <script type="text/javascript">
-      document.getElementById('mio-ID').writeln('Hello World!');
+      document.getElementById('mio-ID').innerHTML = 'Hello World!';
+      //var ciao = document.getElementById('mio-ID');
     </script>
   </body>
 </html>
