--- a/js-lista-spesa/index.html
+++ b/js-lista-spesa/index.html
@@ -11,5 +11,10 @@
 
     <script src="js/script.js" charset="utf-8"></script>
 
+    <!-- <script type="text/javascript">
+    var listaSpesa = document.getElementById('lista-spesa')
+    listaSpesa.innerHTML += '<li>Latte</li>';
+    </script> -->
+
   </body>
 </html>
