--- a/js-form/index.html
+++ b/js-form/index.html
@@ -34,9 +34,9 @@
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='salsa'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='pomodorini'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='formaggio'>
-    </div>
+    </div> -->
 
-    <button id='button-submit' type="button" name="button">Click here</button> -->
+    <button id='button-submit' type="button" name="button">Click here</button> 
 
   <script src="js/script.js" charset="utf-8"></script>
   </body>
