--- a/js-form/index.html
+++ b/js-form/index.html
@@ -29,14 +29,15 @@
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='4'>
     </div>
 
-    <!-- <div class='ingredient-container'>
+    <div class='ingredient-container'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='burger'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='salsa'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='pomodorini'>
       <input type="checkbox" class="ingredient-checkbox" name="list[]" value='formaggio'>
-    </div> -->
+    </div>
 
-    <button id='button-submit' type="button" name="button">Click here</button> 
+    <button id='button-submit' type="button" name="button">Click here</button>
+    <button id='button-ingredient' type="button" name="button">Discover ingredient</button>
 
   <script src="js/script.js" charset="utf-8"></script>
   </body>
