--- a/js-campominato/funzioni-senza-return.html
+++ b/js-campominato/funzioni-senza-return.html
@@ -11,6 +11,7 @@
 
       function add(arr) {
         arr.push('ciaone');
+
       }
 
       var g = [];
@@ -19,6 +20,13 @@
 
       console.log(g)
 
+      switch (expression) {
+        case expression:
+
+          break;
+        default:
+
+      }
 
     </script>
 
