--- a/jquery/index.html
+++ b/jquery/index.html
@@ -12,6 +12,9 @@
 
     <p>Questo è un paragrafo che deve diventare rosso</p>
 
+    <button id="auto-button-click">Click</button>
+    
+    <button id="auto-button-click2">Click 2</button>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
