--- a/js-es6-cats/index.html
+++ b/js-es6-cats/index.html
@@ -12,6 +12,10 @@
     <div id="container">
 
     </div>
+    <div id="container-by-gender">
+      <div class="box-female"></div>
+      <div class="box-male"></div>
+    </div>
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
