--- a/js-es6-cats/index.html
+++ b/js-es6-cats/index.html
@@ -7,6 +7,9 @@
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+  integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+  crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="container">
@@ -16,6 +19,20 @@
       <div class="box-female"></div>
       <div class="box-male"></div>
     </div>
+
+    <div id="container-final-list"></div>
+
+
+    <div id="container-filter">
+      <div class="search">
+        <label for="color">Search</label>
+        <select class="color-select" name="color">
+          <option value="">ALL</option>
+        </select>
+      </div>
+      <div id="box-filtered"></div>
+    </div>
+
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
