--- a/html-css-toboolist/index.html
+++ b/html-css-toboolist/index.html
@@ -17,13 +17,13 @@
         <main>
 
             <!-- navigazione -->
-            <nav class="padding-layout">
+            <nav>
                 <button type="button" class="button button-light">Add Section</button>
                 <button type="button" class="button button-primary">Add Task</button>
             </nav>
 
             <!-- liste -->
-            <div class="section-list padding-layout">
+            <div class="section-list">
 
                 <!-- today list -->
                 <section class="list"> 
