--- a/html-css-bootstrap/index.html
+++ b/html-css-bootstrap/index.html
@@ -21,19 +21,19 @@
     <div class="container">
         <div class="row">
     
-            <div class="col-xs-12">
+            <div class="col-12">
                 <h1>Titolo pagina</h1>
             </div>
-          <div class="col-xs-12 col-md-4">
+          <div class="col-12 col-md-4">
             Column
           </div>
-          <div class="col-xs-12 col-md-4">
+          <div class="col-12 col-md-4">
             <div class="row">
                 <div class="col">sub col 1</div>
                 <div class="col">sub col 2</div>
             </div>
           </div>
-          <div class="col-xs-12 col-md-4">
+          <div class="col-12 col-md-4">
             Column
           </div>
         </div>
