--- a/js-html-live-coding/index.html
+++ b/js-html-live-coding/index.html
@@ -21,6 +21,29 @@
     <div class="click-button">Button 2</div>
     <div class="click-button">Button 3</div>
 
+    <hr>
+
+    <!-- checkbox live coding -->
+
+    <form>
+        <input type="checkbox" class="check-colors" 
+        id="box-color1" name="box-color1" value="red">
+        <label for="box-color1">Red</label>
+        
+        <input type="checkbox" class="check-colors" 
+        id="box-color2" name="box-color2" value="green">
+        <label for="box-color1">Green</label>
+
+        <input type="checkbox" class="check-colors" 
+        id="box-color3" name="box-color3" value="blue">
+        <label for="box-color1">Blue</label>
+    </form>
+
+    <button class="create-boxes">Create</button>
+
+    <div id="boxes-container"></div>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
