--- a/js-html-live-coding/index.html
+++ b/js-html-live-coding/index.html
@@ -44,6 +44,26 @@
     <div id="boxes-container"></div>
 
 
+    <form>
+        <input type="checkbox" id="check-num1" 
+        class="somma-check" value="10">
+        <label for="check-num1">10</label>
+
+        <input type="checkbox" id="check-num2" 
+        class="somma-check" value="20">
+        <label for="check-num2">20</label>
+
+        <input type="checkbox" id="check-num3" 
+        class="somma-check" value="5">
+        <label for="check-num3">5</label>
+
+    </form>
+
+    <button id="somma-button">Somma!</button>
+
+    <div id="result-sum"></div>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
