--- a/js-objects/car-pooling.html
+++ b/js-objects/car-pooling.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     
+    <ul id="car">
 
+    </ul>
+
+    <ul id="pass">
+        
+    </ul>
     <script src="js/car-pooling.js"></script>
 </body>
 </html>
